# simhash

./: .gitignore  .gitmodules  Makefile  README.md  cabal.project  cabal.project.freeze  default.nix  shell.nix  simhash.cabal  stack.yaml
app/: simhash-infer-learn.hs  simhash-infer.hs  simhash-runner.hs  simhash-train.hs
cxx-src/: MyLog.cpp  SimHash.cpp  SimHash.hpp  sdr.cpp  sdr.h
nix/: sources.json
nix/materialized/: default.nix
nix/materialized/.plan.nix/: simhash.nix
sample/: sample.opts.yml  train_data.txt  valid_data.txt
src/: SimHash.hs
src/Htm/: Classifier.hs  Classifier.hsc  Model.hs  Runner.hs  Saver.hsc  Sdr.hs  Sdr.hsc  SimHash.hs  SimHashDocumentEncoder.hs  SimHashDocumentEncoder.hsc  SpatialPooler.hs  SpatialPooler.hsc  Stats.hs  Train.hs  Utils.hs  V1.hs  V2.hs
